--- a/public/style.css
+++ b/public/style.css
@@ -209,6 +209,7 @@ nav .signup_button, nav .login_button {
   background: lightgreen;
   height: 100vh;
   width: 20vw;
+  overflow-y: auto;
 }
 
 .left-panel input {
@@ -222,7 +223,7 @@ nav .signup_button, nav .login_button {
   border: none;
 }
 
-.left-panel .add-button {
+.left-panel-add-button {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
@@ -235,7 +236,7 @@ nav .signup_button, nav .login_button {
   text-align: center;
 }
 
-.left-panel .add-button:hover {
+.left-panel-add-button:hover {
   cursor: pointer;
 }
 
@@ -258,8 +259,45 @@ nav .signup_button, nav .login_button {
 
 .main-content {
   position: absolute;
-  right: 5%;
+  right: 0;
+  width: 80vw;
+  height: 100vh;
+  padding: 1%;
   color: red;
   font-size: 1.5em;
+  overflow-y: auto;
+}
+
+.group-add-button {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  display: inline-block;
+  width: 5%;
+  padding: 5px 0;
+  margin-bottom: 5%;
+  border: none;
+  background: #cbd1d6;
+  text-align: center;
+}
+
+.group-add-button:hover {
+  cursor: pointer;
+}
+
+.group-details {
+  display: inline-block;
+  width: 30%;
+  margin: 0 1.2% 8%;
+  background: #b1adad;
+}
+
+.group-details summary {
+  list-style: none;
+  cursor: pointer;
+}
+
+.group-details > summary::-webkit-details-marker {
+  display: none;
 }
 /*# sourceMappingURL=style.css.map */
