--- a/public/style.scss
+++ b/public/style.scss
@@ -177,6 +177,7 @@ nav {
     background: lightgreen;
     height: 100vh;
     width: 20vw;
+    overflow-y: auto;
 }
 
 .left-panel input {
@@ -188,7 +189,7 @@ nav {
     border: none;
 }
 
-.left-panel .add-button {
+.left-panel-add-button {
     appearance: none;
     display: inline-block;
     width: 20%;
@@ -221,7 +222,41 @@ nav {
 // Mainpage left panel --------------------------------------------------------------------
 .main-content {
     position: absolute;
-    right: 5%;
+    right: 0;
+    width: 80vw;
+    height: 100vh;
+    padding: 1%;
     color: red;
     font-size: 1.5em;
+    overflow-y: auto;
 }
+
+.group-add-button {
+    appearance: none;
+    display: inline-block;
+    width: 5%;
+    padding: 5px 0;
+    margin-bottom: 5%;
+    border: none;
+    background: rgb(203, 209, 214);
+    text-align: center;
+    &:hover {
+        cursor: pointer;
+    }
+}
+
+.group-details {
+    // border: solid 1px red;
+    display: inline-block;
+    width: 30%;
+    margin: 0 1.2% 8%;
+    background: rgb(177, 173, 173);
+    summary {
+        list-style: none;
+        cursor: pointer;
+    }
+}
+
+.group-details > summary::-webkit-details-marker {
+    display: none;
+  }
