--- a/public/style.scss
+++ b/public/style.scss
@@ -203,7 +203,7 @@ nav {
     }
 }
 
-.topic-button {
+.group-button {
     appearance: none;
     display: inline-block;
     width: 100%;
@@ -234,6 +234,8 @@ nav {
 .group-add-button {
     appearance: none;
     display: inline-block;
+    position: relative;
+    left: 90%;
     width: 5%;
     padding: 5px 0;
     margin-bottom: 5%;
@@ -244,19 +246,3 @@ nav {
         cursor: pointer;
     }
 }
-
-.group-details {
-    // border: solid 1px red;
-    display: inline-block;
-    width: 30%;
-    margin: 0 1.2% 8%;
-    background: rgb(177, 173, 173);
-    summary {
-        list-style: none;
-        cursor: pointer;
-    }
-}
-
-.group-details > summary::-webkit-details-marker {
-    display: none;
-  }
