--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-nav .signup_button, nav .login_button {
+.nav__signup-btn, .nav__login-btn {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
@@ -9,7 +9,7 @@ nav .signup_button, nav .login_button {
   font-size: 1.2em;
 }
 
-nav .signup_button:hover, nav .login_button:hover {
+.nav__signup-btn:hover, .nav__login-btn:hover {
   cursor: pointer;
 }
 
@@ -21,85 +21,21 @@ nav .signup_button:hover, nav .login_button:hover {
 }
 
 body {
+  background: #000;
   font-family: 'Noto Sans JP', sans-serif;
   overflow: hidden;
 }
 
-nav {
-  background: skyblue;
-  padding: 0.5% 0;
-}
-
-nav span {
-  margin-left: 2%;
-  font-size: 2em;
-}
-
-nav .signup_button, nav .login_button {
-  float: right;
-  -webkit-transform: translateY(20%);
-          transform: translateY(20%);
-  margin-right: 5%;
-}
-
-.account_icon {
-  float: right;
-  margin-right: 5%;
-  padding-top: 0.5%;
-}
-
-.account_icon:hover {
-  cursor: pointer;
-}
-
-.options-modal {
+.login-signup-form {
   position: absolute;
-  right: 2%;
-  padding: 5px;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  padding: 3% 0;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  z-index: 10;
-  background: lightblue;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  color: white;
-}
-
-.options-modal button {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  outline: red;
-  background: transparent;
-  border: none;
-  font-size: 1.2em;
-}
-
-.options-modal button:hover {
-  cursor: pointer;
-  background: yellow;
-}
-
-.login-join-form {
-  background: skyblue;
-  margin: 5% auto 0;
-  padding-left: 10%;
-  height: 70vh;
   width: 40%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -114,39 +50,125 @@ nav .signup_button, nav .login_button {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
+  background: transparent;
+  color: #e94560;
+  border: solid 3px #240090;
+  border-radius: 15px;
 }
 
-.login-join-form h1 {
-  margin-top: -10%;
-  margin-bottom: 10%;
+.login-signup-form__title {
+  margin: 0 auto 10%;
 }
 
-.login-join-form input {
+.login-signup-form__label, .login-signup-form__input,
+.login-signup-form__btn {
+  margin-left: 16%;
+}
+
+.login-signup-form__input {
   width: 70%;
-  height: 7%;
-  padding: 1% 2%;
+  height: 8%;
+  padding: 0.5% 2%;
   margin-bottom: 3%;
+  font-size: 1.1em;
+  font-weight: 500;
 }
 
-.login-join-form button {
-  margin-top: 4%;
+.login-signup-form__btn {
+  margin-top: 6%;
+  padding: 2%;
   width: 70%;
-  height: 7%;
+  border: none;
+  background: #240090;
+  color: #fff;
+  font-size: 1.1em;
 }
 
-.login-join-form button:hover {
+.login-signup-form__btn:hover {
   cursor: pointer;
 }
 
-.login-join-form p {
-  margin-top: 9%;
-  width: 70%;
+.login-signup-form__text {
+  margin: 8% auto 0;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
-.login-join-form p .navlink {
-  margin-left: 2%;
+.login-signup-form__text_link {
   text-decoration: none;
-  color: red;
+  color: #fff;
+}
+
+.nav {
+  padding: 0.5% 0;
+}
+
+.nav .nav__title {
+  margin-left: 2%;
+  font-size: 2em;
+  color: #e94560;
+}
+
+.nav__signup-btn, .nav__login-btn {
+  float: right;
+  -webkit-transform: translateY(20%);
+          transform: translateY(20%);
+  margin-right: 5%;
+}
+
+.nav__account-icon {
+  float: right;
+  margin-right: 5%;
+  padding-top: 0.5%;
+  color: #e94560;
+}
+
+.nav__account-icon:hover {
+  cursor: pointer;
+}
+
+.options-modal {
+  position: absolute;
+  right: 2%;
+  padding: 5px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  z-index: 10;
+  background: #e94560;
+  border-radius: 2px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.options-modal button {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  outline: red;
+  background: transparent;
+  border: none;
+  color: #fff;
+  font-size: 1.2em;
+}
+
+.options-modal button:hover {
+  cursor: pointer;
 }
 
 .left-panel {
