--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,9 @@
+.options-modal__btn:focus, .left-panel__select-button:focus, .left-panel__input:focus, .left-panel__add-button:focus, .topic-content__add-button:focus {
+  outline-style: solid;
+  outline-width: 2px;
+  outline-color: #5D88FA;
+}
+
 .nav__signup-btn, .nav__login-btn {
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -191,9 +197,9 @@ body {
   position: absolute;
   bottom: 3%;
   left: 1%;
-  padding: 1% 2%;
+  padding: 1% 0;
   background: #282828;
-  border-radius: 10px;
+  border-radius: 7px;
   height: 85vh;
   width: 20vw;
   overflow-y: auto;
@@ -206,18 +212,30 @@ body {
           appearance: none;
   display: inline-block;
   width: 100%;
-  padding: 2% 0;
-  margin-bottom: 5%;
-  border: solid 2px #5d55fa;
-  border-radius: 50px;
+  padding: 3% 0 3% 8%;
+  margin-bottom: 3%;
+  border: none;
   background: transparent;
   color: #C8C8C8;
-  text-align: center;
+  text-align: left;
   font-size: 1.2em;
+}
+
+.left-panel__select-button i {
+  visibility: hidden;
+  float: right;
+  margin-right: 7%;
+  font-size: 0.9em;
 }
 
 .left-panel__select-button:hover {
   cursor: pointer;
+  background: #5D88FA;
+  color: #E0E0E0;
+}
+
+.left-panel__select-button:hover i {
+  visibility: visible;
 }
 
 .left-panel__input {
@@ -226,9 +244,9 @@ body {
           appearance: none;
   position: absolute;
   bottom: 0;
-  left: 4%;
+  left: 7%;
   display: inline-block;
-  width: 80%;
+  width: 75%;
   padding: 2%;
   margin-bottom: 5%;
   background: #17171a;
@@ -242,10 +260,10 @@ body {
      -moz-appearance: none;
           appearance: none;
   position: absolute;
-  bottom: 0.5%;
-  right: -1.5%;
+  bottom: 0.3%;
+  right: 1%;
   display: inline-block;
-  width: 20%;
+  width: 15%;
   padding: 2% 0;
   margin-bottom: 5%;
   border: none;
@@ -256,42 +274,63 @@ body {
 
 .left-panel__add-button:hover {
   cursor: pointer;
+  color: #5D88FA;
 }
 
 .left-panel__add-button i {
-  -webkit-transform: scale(1.5);
-          transform: scale(1.5);
+  font-size: 1.4em;
 }
 
-.main-content {
+.topic-content {
   position: absolute;
-  right: 0;
-  width: 80vw;
-  height: 100vh;
+  right: 1%;
+  bottom: 3%;
+  width: 77vw;
+  height: 85vh;
   padding: 1%;
-  color: red;
   font-size: 1.5em;
   overflow-y: auto;
   overflow-x: hidden;
 }
 
-.group-add-button {
+.topic-content__add-button {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
   display: inline-block;
-  position: relative;
-  left: 90%;
-  width: 5%;
+  position: absolute;
+  right: 5%;
+  bottom: 3%;
+  width: 3.5vw;
+  height: 3.5vw;
   padding: 5px 0;
-  margin-bottom: 5%;
   border: none;
-  background: #cbd1d6;
+  border-radius: 50%;
+  background: #5d55fa;
+  color: #E0E0E0;
+  font-size: 1em;
   text-align: center;
 }
 
-.group-add-button:hover {
+.topic-content__add-button:hover {
   cursor: pointer;
+  background: #5D88FA;
+}
+
+.topic-content__link {
+  display: inline-block;
+  margin: 0 1.5% 2%;
+  padding: 1%;
+  border-radius: 5px;
+}
+
+.topic-content__link a {
+  text-decoration: none;
+  color: #5d55fa;
+}
+
+.topic-content__link:hover {
+  background: #3A3A3C;
 }
 
 .password-modal, .link-modal {
